[gd_scene load_steps=14 format=3 uid="uid://c02s2e23lhgw6"]

[ext_resource type="Script" uid="uid://c4a8cxmg3n013" path="res://Scripts/General Scripts/Start_menu.gd" id="1_18i8s"]
[ext_resource type="PackedScene" uid="uid://dogqm3tc43mna" path="res://Scenes/Game/game.tscn" id="2_2klqx"]
[ext_resource type="Shader" uid="uid://b5keia2y5nc4j" path="res://Shaders/BackgroundS1.gdshader" id="3_3ir0d"]
[ext_resource type="Theme" uid="uid://cxj4g1d5vhtru" path="res://Used Assets/Base_Theme.tres" id="3_5jta6"]
[ext_resource type="FontFile" uid="uid://d6jhecc8xjh1" path="res://Used Assets/GravityBold8.ttf" id="3_xxxa8"]
[ext_resource type="Texture2D" uid="uid://bwn1h2ngpi8vh" path="res://Used Assets/Background.png" id="4_k7b03"]
[ext_resource type="AudioStream" uid="uid://t7e3d16d7q33" path="res://Used Assets/Start_Music.ogg" id="5_k7b03"]
[ext_resource type="AudioStream" uid="uid://cmribi0lsiuft" path="res://Used Assets/Button_Click.ogg" id="8_b1lmq"]
[ext_resource type="AudioStream" uid="uid://cvgxu0lgtedl8" path="res://Used Assets/Game_Start_Button.ogg" id="9_0lska"]
[ext_resource type="Texture2D" uid="uid://bswaj5vk58i6n" path="res://Used Assets/Background2.png" id="10_0lska"]

[sub_resource type="LabelSettings" id="LabelSettings_u0spy"]
paragraph_spacing = 20.0
font = ExtResource("3_xxxa8")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.32549)
shadow_offset = Vector2(1, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxxa8"]
shader = ExtResource("3_3ir0d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0lska"]
shader = ExtResource("3_3ir0d")

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18i8s")
game_scene = ExtResource("2_2klqx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameName" type="Label" parent="."]
layout_mode = 2
offset_left = 370.0
offset_top = 100.0
offset_right = 783.0
offset_bottom = 183.0
theme = ExtResource("3_5jta6")
text = "R.O.I.D
ASTEROID DEFENCE"
label_settings = SubResource("LabelSettings_u0spy")
horizontal_alignment = 1

[node name="Base_Container" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 449.0
offset_top = 401.0
offset_right = 756.0
offset_bottom = 556.0

[node name="PlayButton" type="Button" parent="Base_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
theme_override_fonts/font = ExtResource("3_xxxa8")
text = "Play"

[node name="LeaderboardButton" type="Button" parent="Base_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Leaderboard"

[node name="OptionsButton" type="Button" parent="Base_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Options"

[node name="LogOut Button" type="Button" parent="Base_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Log Out"

[node name="QuitButton" type="Button" parent="Base_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Quit"

[node name="Play_Container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 450.0
offset_top = 400.0
offset_right = 750.0
offset_bottom = 508.0

[node name="CampaignButton" type="Button" parent="Play_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Campaign"

[node name="HostButton" type="Button" parent="Play_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Host Game"

[node name="JoinFriendsButton" type="Button" parent="Play_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Join Game"

[node name="BackButton_1" type="Button" parent="Play_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Back"

[node name="Options_Container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 425.0
offset_top = 429.0
offset_right = 724.0
offset_bottom = 564.0

[node name="ChangeName_Button" type="Button" parent="Options_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Change Player Name"

[node name="Customize_Button" type="Button" parent="Options_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Customize Player Ship"

[node name="BackButton_2" type="Button" parent="Options_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
text = "Back"

[node name="Options_Expanded_Container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 425.0
offset_top = 429.0
offset_right = 733.0
offset_bottom = 507.0

[node name="Label" type="Label" parent="Options_Expanded_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
theme_override_font_sizes/font_size = 15
text = "Change Player Name"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Options_Expanded_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
theme_override_font_sizes/font_size = 15
placeholder_text = "Enter Player Name"
alignment = 1

[node name="Submit_Button" type="Button" parent="Options_Expanded_Container"]
layout_mode = 2
theme = ExtResource("3_5jta6")
theme_override_font_sizes/font_size = 15
text = "Submit"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
texture_repeat = 2
material = SubResource("ShaderMaterial_xxxa8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_k7b03")

[node name="Sound_Effects" type="Node2D" parent="."]

[node name="StartMusic" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("5_k7b03")
autoplay = true

[node name="Button_Pressed" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("8_b1lmq")

[node name="Game_Start" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("9_0lska")

[node name="Planets_Drifting" type="TextureRect" parent="."]
z_index = -1
texture_repeat = 2
material = SubResource("ShaderMaterial_0lska")
layout_mode = 0
offset_left = -5.0
offset_top = -1.0
offset_right = 1171.0
offset_bottom = 645.0
mouse_filter = 2
texture = ExtResource("10_0lska")

[connection signal="pressed" from="Base_Container/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="Base_Container/LogOut Button" to="." method="_on_log_out_button_pressed"]
[connection signal="pressed" from="Play_Container/CampaignButton" to="." method="_on_campaign_button_pressed"]
[connection signal="pressed" from="Play_Container/BackButton_1" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Options_Container/ChangeName_Button" to="." method="_on_change_name_button_pressed"]
[connection signal="pressed" from="Options_Container/Customize_Button" to="." method="_on_customize_button_pressed"]
[connection signal="pressed" from="Options_Container/BackButton_2" to="." method="_on_back_button_2_pressed"]
[connection signal="pressed" from="Options_Expanded_Container/Submit_Button" to="." method="_on_submit_button_pressed"]
